@@ -52,6 +52,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #11377: Deprecate platform.popen() and reimplement it with os.popen().
+
 - Issue #8513: On UNIX, subprocess supports bytes command string.
 
 - Issue #10866: Add socket.sethostname().  Initial patch by Ross Lagerwall.
